...
          userMap!,
          'Friend Added',
          '${foundFriend.UserName} is waiting for you!'
      );
      Navigator.pop(context);
      Fluttertoast.showToast(
        msg: "Friend added successfully!",
        gravity: ToastGravity.SNACKBAR,
      );



      await _refreshContacts();
...
                ),
                const SizedBox(height: 20),
                Row(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    IC_button(
                      title: 'Add Friend',
                      onPress: () {
                        _addFriend(_controllerPhone.text);

                      },
                      icon: const Icon(
                        Icons.person_add,
...
                    SizedBox(height: MediaQuery.of(context).size.height * 0.02),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [

                        IC_button(
                          title: 'Create Your Own Event',
                          onPress: () {
                            Navigator.pushNamed(context, '/EventCreatePage');
                          },
                          icon: const Icon(
                            Icons.edit_calendar,
                            color: Colors.white,
...
