...
      builder: (BuildContext context) {
        return AlertDialog(
          title: Text('Error'),
          content: Text('You cannot pledge this gift.'),
          actions: <Widget>[
            TextButton(
              child: Text('OK'),
              onPressed: () {
                Navigator.of(context).pop();
              },
            ),
          ],
        );
...
